--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -2,34 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;700&display=swap");
+
 // ======MISCELLANEOUS=========
 
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
-	--bezier-bounce: 0.1, 0.885, 0.32, 1.575;
+  --bezier-bounce: 0.1, 0.885, 0.32, 1.575;
 }
-
 
 .light-theme::before,
 .dark-theme::before {
-	transition: transform 0.5s cubic-bezier(var(--bezier-bounce));
+  transition: transform 0.5s cubic-bezier(var(--bezier-bounce));
 }
 .light-theme::before {
-	transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
 }
 
 .dark-theme::before {
-	transform: translate3d(0, 46px, 0);
+  transform: translate3d(0, 46px, 0);
 }
 
-
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
+// input[type='number']::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
@@ -40,7 +40,7 @@ input[type='number']::-webkit-outer-spin-button {
   width: 4px;
 }
 .sidebar-scroll::-webkit-scrollbar-thumb {
-  background: rgba(52, 202, 165, 0.10);
+  background: rgba(52, 202, 165, 0.1);
 }
 ::-webkit-scrollbar {
   width: 8px;
@@ -52,20 +52,22 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #0D062D;
-  border-radius: 8px;
+  background: #0d062d;
+  border-radius: 6px;
 }
 
 ::selection {
   color: white;
-  background: #0D062D;
+  background: #0d062d;
 }
-
 
 .active {
-  background: linear-gradient(92deg, rgba(140, 49, 255, 0.05) 0%, rgba(140, 49, 255, 0.22) 100%);
+  background: linear-gradient(
+    92deg,
+    rgba(140, 49, 255, 0.05) 0%,
+    rgba(140, 49, 255, 0.22) 100%
+  );
 }
-
 
 // ======MISCELLANEOUS=========
 .button--loader {
@@ -91,4 +93,16 @@ input[type='number']::-webkit-outer-spin-button {
 
 .button--loader span:nth-child(3) {
   animation-delay: 0.6s;
+}
+
+@keyframes scaleUp {
+  0%,
+  80%,
+  100% {
+    transform: scale(0);
+  }
+
+  40% {
+    transform: scale(1);
+  }
 }
